--- a/index.html
+++ b/index.html
@@ -1,158 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <title>Поймай Леру</title>
-  <style>
-    body {
-      margin: 0;
-      background: black;
-      overflow: hidden;
-      font-family: 'Press Start 2P', cursive;
-      color: white;
-    }
-    #game {
-      position: relative;
-      width: 100vw;
-      height: 100vh;
-    }
-    .face {
-      position: absolute;
-      width: 80px;
-      height: auto;
-      animation: fall linear;
-      cursor: pointer;
-    }
-    @keyframes fall {
-      0% { top: -100px; }
-      100% { top: 100vh; }
-    }
-    #scoreboard {
-      position: absolute;
-      bottom: 10px;
-      left: 10px;
-      font-size: 12px;
-    }
-    #message {
-      position: absolute;
-      top: 40%;
-      width: 100%;
-      text-align: center;
-      font-size: 14px;
-      display: none;
-    }
-    #message button {
-      font-size: 12px;
-      margin-top: 1rem;
-    }
-    #title {
-      text-align: center;
-      padding: 10px;
-      font-size: 12px;
-    }
-  </style>
-</head>
-<body>
-  <div id="title">Поймай Леру 7 раз подряд!</div>
-  <div id="game">
-    <div id="scoreboard">Поймано подряд: 0 / 7</div>
-    <div id="message">
-      <div id="resultText"></div>
-      <button onclick="restartGame()">Еще раз?</button>
-    </div>
-  </div>
-  <audio id="bg-music" src="bg.wav" loop></audio>
-  <audio id="catch-sound" src="catch.wav"></audio>
-  <audio id="lose-sound" src="lose.wav"></audio>
-  <audio id="win-sound" src="win.wav"></audio>
-  <script>
-    const game = document.getElementById('game');
-    const scoreboard = document.getElementById('scoreboard');
-    const message = document.getElementById('message');
-    const resultText = document.getElementById('resultText');
-
-    const bgMusic = document.getElementById('bg-music');
-    const catchSound = document.getElementById('catch-sound');
-    const loseSound = document.getElementById('lose-sound');
-    const winSound = document.getElementById('win-sound');
-
-    const correctFaces = ['1_1.png', '1_2.png', '1_3.png', '1_4.png', '1_5.png', '1_6.png', '1_7.png'];
-    const wrongFaces = ['2_1.png', '2_2.png', '2_3.png', '2_4.png', '2_5.png', '2_6.png', '2_7.png', '2_8.png', '2_9.png', '2_10.png', '2_11.png', '2_12.png'];
-    const allFaces = correctFaces.concat(wrongFaces);
-
-    let caughtStreak = 0;
-    let gameInterval;
-    let started = false;
-
-    function spawnFace() {
-      const img = document.createElement('img');
-      const isCorrect = Math.random() < 0.3;
-      const src = isCorrect
-        ? correctFaces[Math.floor(Math.random() * correctFaces.length)]
-        : wrongFaces[Math.floor(Math.random() * wrongFaces.length)];
-      img.src = 'src;
-      img.className = 'face';
-      img.dataset.correct = correctFaces.includes(src);
-      img.style.left = Math.random() * 90 + 'vw';
-      img.style.animationDuration = (2 + Math.random() * 2) + 's';
-      game.appendChild(img);
-
-      const timer = setTimeout(() => game.removeChild(img), parseFloat(img.style.animationDuration) * 1000);
-
-      img.addEventListener('click', () => {
-        clearTimeout(timer);
-        game.removeChild(img);
-        if (img.dataset.correct === 'true') {
-          catchSound.currentTime = 0;
-          catchSound.play();
-          caughtStreak++;
-        } else {
-          caughtStreak = 0;
-          lose();
-          return;
-        }
-        scoreboard.textContent = `Поймано подряд: ${caughtStreak} / 7`;
-        if (caughtStreak >= 7) win();
-      });
-    }
-
-    function win() {
-      clearInterval(gameInterval);
-      bgMusic.pause();
-      winSound.play();
-      message.style.display = 'block';
-      resultText.textContent = 'Ты поймал(а) Леру 7 раз подряд!';
-      setTimeout(() => {
-        window.location.href = 'https://vldshshkn.github.io/safe_game/';
-      }, 5000);
-    }
-
-    function lose() {
-      clearInterval(gameInterval);
-      bgMusic.pause();
-      loseSound.play();
-      message.style.display = 'block';
-      resultText.textContent = 'Это был не тот человек. Еще раз?';
-    }
-
-    function restartGame() {
-      message.style.display = 'none';
-      caughtStreak = 0;
-      scoreboard.textContent = 'Поймано подряд: 0 / 7';
-      bgMusic.currentTime = 0;
-      bgMusic.play();
-      gameInterval = setInterval(spawnFace, 1000);
-    }
-
-    document.addEventListener('DOMContentLoaded', () => {
-      document.addEventListener('mousemove', () => {
-        if (!started) {
-          started = true;
-          bgMusic.play();
-          restartGame();
-        }
-      });
-    });
-  </script>
-</body>
-</html>
+<html><body><h1>Игра загружается...</h1></body></html>
